# fav_state_estimation

./: CMakeLists.txt  README.md  package.xml
cfg/: Setpoints.cfg  StateEstimation.cfg
csv/: bag_2021-01-01-19-59-54-estimated_state.csv  bag_2021-01-01-19-59-54-ground_truth-state.csv  bag_2021-01-01-19-59-54-lateral_thrust.csv  bag_2021-01-01-19-59-54-mavros-imu-data.csv  bag_2021-01-01-19-59-54-mavros-setpoint_motor-setpoint.csv  bag_2021-01-01-19-59-54-pressure.csv  bag_2021-01-01-19-59-54-rosout.csv  bag_2021-01-01-19-59-54-thrust.csv  bag_2021-01-01-19-59-54-vertical_thrust.csv  bag_2021-01-01-19-59-54-x_setpoint.csv  bag_2021-01-01-19-59-54-y_setpoint.csv  bag_2021-01-01-19-59-54-yaw.csv  bag_2021-01-01-19-59-54-yaw_setpoint.csv  bag_2021-01-01-19-59-54-z_setpoint.csv  bag_2021-01-01-20-05-06-estimated_state.csv  bag_2021-01-01-20-05-06-ground_truth-state.csv  bag_2021-01-01-20-05-06-lateral_thrust.csv  bag_2021-01-01-20-05-06-mavros-imu-data.csv  bag_2021-01-01-20-05-06-mavros-setpoint_motor-setpoint.csv  bag_2021-01-01-20-05-06-pressure.csv  bag_2021-01-01-20-05-06-rosout.csv  bag_2021-01-01-20-05-06-thrust.csv  bag_2021-01-01-20-05-06-vertical_thrust.csv  bag_2021-01-01-20-05-06-x_setpoint.csv  bag_2021-01-01-20-05-06-y_setpoint.csv  bag_2021-01-01-20-05-06-yaw.csv  bag_2021-01-01-20-05-06-yaw_setpoint.csv  bag_2021-01-01-20-05-06-z_setpoint.csv  bag_2021-01-01-20-08-44-estimated_state.csv  bag_2021-01-01-20-08-44-ground_truth-state.csv  bag_2021-01-01-20-08-44-lateral_thrust.csv  bag_2021-01-01-20-08-44-mavros-imu-data.csv  bag_2021-01-01-20-08-44-mavros-setpoint_motor-setpoint.csv  bag_2021-01-01-20-08-44-pressure.csv  bag_2021-01-01-20-08-44-rosout.csv  (+89 more)
(+7 files in other folders)
