<?xml version="1.0"?>
<package format="2">
  <name>fav_state_estimation</name>
  <version>0.0.0</version>
  <description>The fav_state_estimation package</description>

  <maintainer email="r.hochdahl@gmail.com">Rene Hochdahl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
